--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,8 +18,8 @@ ul {
   padding: 0;
   width: 25%;
   background-color: #f1f1f1;
-  position: fixed; /* Make it stick, even on scroll */
-  overflow: auto; /* Enable scrolling if the sidenav has too much content */
+  position: sticky; /* Make it stick, even on scroll */
+  overflow: none; /* Enable scrolling if the sidenav has too much content */
 }
 
 li a {
@@ -34,3 +34,4 @@ li a:hover {
   background-color: #555;
   color: white;
 }
+
