--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,9 +14,9 @@ h1{
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 100;
   padding: 0;
-  width: 25%;
+  width: 30%;
   background-color: #f1f1f1;
   position: sticky; /* Make it stick, even on scroll */
   overflow: none; /* Enable scrolling if the sidenav has too much content */
@@ -34,4 +34,9 @@ li a:hover {
   background-color: #555;
   color: white;
 }
+
+#TitleList{
+  size:30px;
+}
+
 
