Problem MHD only load once

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,3 +10,4 @@ html
       li
         a(href='/nav/create') New Product
   block content
+  script(language="javascript", type="text/javascript" src="/javascript/JS.js" defer)
