--- a/views/listProducts.pug
+++ b/views/listProducts.pug
@@ -2,17 +2,13 @@ extends layout
 
 block content
     each post in products
+        a#TitleList(href='/blog/singlePost/'+post.id) #{post.name}
+        br
         img(src='/pic/ColaDose.jpg' width='300' height='300') 
         br
-        a#TitleList.title(href='/blog/singlePost/'+post.id) #{post.name}
-        p Amount: #{post.amount}
-        p Superhero: #{post.today}   
-        p#love
+        p Amount: #{post.amount}   
+        p#love 
         script.
-            if(#{post.MHD} >= 0){
-            document.getElementById('love').innerHTML = "Your food Lifetime is in " + #{post.MHD} + " days over" ;  
-            }else{
-            document.getElementById('love').innerHTML = "The Food MHD date is over since " + Math.abs(#{post.MHD}) + " days" ;
-            }
-        button#DetailBtn(type= )
+            MHD(#{post.MHD})
+        button#DetailBtn(type='submit') Details
         p.lastentry 
