--- a/views/listProducts.pug
+++ b/views/listProducts.pug
@@ -4,7 +4,7 @@ block content
     each post in products
         a#TitleList(href='/blog/singlePost/'+post.id) #{post.name}
         br
-        img(src='/pic/ColaDose.jpg' width='300' height='300') 
+        img(src=post.img width='300' height='300') 
         br
         p Amount: #{post.amount}   
         p#love 
