--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,6 @@ html
       li
         a(href='/nav/list') Products
       li
-        a(href='/nav/create') New Product
+        a(href='/nav/create') Add Product
   block content
   script(language="javascript", type="text/javascript" src="/javascript/JS.js" defer)
